Change icon stiles

--- a/src/metadata.css
+++ b/src/metadata.css
@@ -36,8 +36,7 @@
 }
 
 .icons {
-  background-color:  white;
-  border-bottom: 2px solid lightblue;
+  background-color: #c8c8c8;
   padding-top: 5px;
   padding-bottom: 5px;
 }
